--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
                     </details>
                 </li>
                 <li><b>
-                        <font style="font-size: 18px;">MIMO for Integrated space-air-ground-sea
-                            networks<br>MIMO使能的空天地海一体化网络</font>
+                        <font style="font-size: 18px;">MIMO for Integrated space-air-ground-sea networks and LEO 
+                            satellite Internet<br>MIMO使能的空天地海一体化网络与低轨卫星互联网</font>
                     </b>
                     <div align="center">
                         <img src="./Files/x3.png" title="sags" alt="sags" width="45%"
@@ -1033,6 +1033,20 @@
             <p><b>
                     <font style="font-size: 18px;">Book Chapters</font>
                 </b>: </p>
+
+            <table><tr>
+            <td><a href="https://item.jd.com/13533595.html">
+                    <img src="./Files/x7_1.png" title="大规模MIMO通信稀疏信号处理" alt="大规模MIMO通信稀疏信号处理" width="210px"
+                style="display:block; margin:0 auto;">
+                </a>
+            </td>
+            <td><a href="https://item.jd.com/10057073503285.html">
+                    <img src="./Files/x7_2.png" title="Massive IoT Access for 6G" alt="Massive IoT Access for 6G" width="120px"
+                style="display:block; margin:0 auto;">
+                </a>
+            </td>
+            </tr></table>
+
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
