--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.07]</font>
-                    </b> [2023.07] Paper of Shicong Liu was accecpted by IEEE JSTSP (刘仕聪论文被IEEE JSTSP
+                    </b> Paper of Shicong Liu was accecpted by IEEE JSTSP (刘仕聪论文被IEEE JSTSP
                     (IF=7.70)期刊录用)【知识数据协同驱动的无蜂窝大规模MIMO传输】
                 </li>
 
@@ -103,6 +103,11 @@
                     <a href="https://mp.weixin.qq.com/s/_9wutgk3yYvf9zQ85elWZw" target="_blank">
                         <font color="#FF0000">【北理工信息学院专题报道】</font>
                     </a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2023.06]</font>
+                </b> Ziwei Wan was awarded Northern Industrial Scholarship (博士生万子维获得北方工业奖学金)
                 </li>
 
                 <li> <b>
