--- a/index.html
+++ b/index.html
@@ -2292,6 +2292,7 @@
                             Assisted Localization Over Near-Field Beam Squint Effect," 2022 International Symposium on
                             Wireless Communication Systems (ISWCS), Hangzhou, China, 2022, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9940428" target="_blank">URL</a>]
+                            [<a href="./Files/lzr_ISWCS_Slides.pdf" target="_blank">Slides</a>]
                             <!-- [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>] -->
                         </span>
                     </p>
