--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[56] Z. Gao, S. Liu, Y. Su, Z. Li, and D. Zheng, "Hybrid Knowledge-Data Driven Channel
+                        <span>[57] <b>Z. Gao</b>, S. Liu, Y. Su, Z. Li, and D. Zheng, "Hybrid Knowledge-Data Driven Channel
                             Semantic Acquisition and Beamforming for Cell-Free Massive MIMO", to appear in IEEE J. Sel.
                             Topics Signal Process.
                             [<a href="https://arxiv.org/abs/2307.03070" target="_blank">arXiv</a>]
@@ -1377,7 +1377,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[55] Z. Li, <b>Z. Gao</b> and T. Li, "Sensing User's Channel and Location with Terahertz
+                        <span>[56] Z. Li, <b>Z. Gao</b> and T. Li, "Sensing User's Channel and Location with Terahertz
                             Extra-Large Reconfigurable Intelligent Surface under Hybrid-Field Beam Squint Effect,"
                             accepted by IEEE J. Sel. Top. Sign. Proces, 2023.
                             [<a href="https://arxiv.org/abs/2305.07184" target="_blank">arXiv</a>]
@@ -1429,7 +1429,7 @@
                     </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[54] K. Ying, <b>Z. Gao</b>, S. Chen, M. Zhou, D. Zheng, S. Chatzinotas, B. Ottersten, and
+                        <span>[55] K. Ying, <b>Z. Gao</b>, S. Chen, M. Zhou, D. Zheng, S. Chatzinotas, B. Ottersten, and
                             H. V. Poor,
                             "Quasi-Synchronous Random Access for Massive MIMO-Based LEO Satellite Constellations,"
                             in IEEE Journal on Selected Areas in Communications, vol. 41, no. 6, pp. 1702-1722, June
@@ -1443,7 +1443,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[53] Y. Mei, <b>Z. Gao</b>, D. Mi, M. Zhou, D. Zheng, M. Matthaiou, P. Xiao,
+                        <span>[54] Y. Mei, <b>Z. Gao</b>, D. Mi, M. Zhou, D. Zheng, M. Matthaiou, P. Xiao,
                             R. Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
                             Channels," accepted by IEEE Trans. Vehicular Technology, 2023.
                             [<a href="https://arxiv.org/abs/2207.01983" target="_blank">arXiv</a>]
@@ -1455,18 +1455,28 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[52] M. Ke, <b>Z. Gao</b>, M. Zhou, D. Zheng, D. W. K. Ng, H. V. Poor,
-                            "Next-Generation URLLC with Massive Devices: A Unified Semi-Blind Detection Framework for
-                            Sourced and Unsourced Random Access," accepted by IEEE J. Sel. Areas Commun., 2023.
+                        <span>[53] <b>Z. Gao</b>, H. Xiu, Y. Mei, A. Liao, M. Ke, C. Hu, M. S. Alouini, "Multi-panel extra-large scale 
+                            MIMO based joint activity detection and channel estimation for near-field massive IoT access," in 
+                            China Communications, vol. 20, no. 5, pp. 232-243, May 2023.
+                            [<a href="https://ieeexplore.ieee.org/document/10130736" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[52] M. Ke, <b>Z. Gao</b>, M. Zhou, D. Zheng, D. W. K. Ng and H. V. Poor, 
+                            "Next-Generation URLLC With Massive Devices: A Unified Semi-Blind Detection 
+                            Framework for Sourced and Unsourced Random Access," in IEEE Journal on Selected Areas in Communications, vol. 41, no. 7, pp. 2223-2244, July 2023.
                             [<a href="https://arxiv.org/abs/2303.04414" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10138415" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[51] K. Ying, <b>Z. Gao</b>, S. Chen, X. Gao, M. Matthaiou, R. Zhang, and
                             R. Schober, "Reconfigurable Massive MIMO: Harnessing the Power of the Electromagnetic Domain
-                            for Enhanced Information Transfer," accepted by IEEE Wireless Communications.
+                            for Enhanced Information Transfer," accepted by IEEE Wireless Communications, 2023.
                             [<a href="https://arxiv.org/abs/2302.11385" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10077503" target="_blank">IEEE URL</a>]
                             <!-- [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>] -->
                         </span>
                     </p>
@@ -1524,18 +1534,18 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[47] <b>Z. Gao</b>, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W.
                             K. Ng,
-                            B. Ottersten, "Grant-Free NOMA-OTFS Paradigm: Enabling Efficient Ubiquitous Access for LEO
-                            Satellite Internet-of-Things", accepted by IEEE Network, arXiv:2209.12159.
+                            B. Ottersten, "Grant-Free NOMA-OTFS Paradigm: Enabling Efficient Ubiquitous Access for LEO Satellite 
+                            Internet-of-Things," in IEEE Network, vol. 37, no. 1, pp. 18-26, March 2023.
                             [<a href="https://arxiv.org/abs/2209.12159" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10110015" target="_blank">IEEE URL</a>]
                             <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[46] M. Wu, <b>Z. Gao</b>, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep
-                            Learning-Based
-                            Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz
-                            Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
+                        <span>[46] M. Wu, <b>Z. Gao</b>, Y. Huang, Z. Xiao, D. W. K. Ng and Z. Zhang, "Deep Learning-Based 
+                            Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz 
+                            Massive MIMO," in IEEE Journal on Selected Areas in Communications, vol. 41, no. 5, pp. 1431-1451, May 2023.
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10032139" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/wuminghui123/DL_RSMA" target="_blank">
@@ -1549,17 +1559,16 @@
                             Ottersten,
                             "Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
                             NOMA-OTFS in LEO Satellite Internet-of-Things," in IEEE Transactions on Wireless
-                            Communications, vol. 22, no. 4, pp. 2847-2866, April 2023, doi: 10.1109/TWC.2022.3214862.
+                            Communications, vol. 22, no. 4, pp. 2847-2866, April 2023.
                             [<a href="https://arxiv.org/pdf/2201.02084.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9928043" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[44] H. Xiu, <b>Z. Gao</b>, et al., "Joint Activity Detection and Channel Estimation for
-                            Massive IoT Access Based on
-                            Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular
-                            Technology, 2022.
+                        <span>[44] H. Xiu, <b>Z. Gao</b>, et al., "Joint Activity Detection and Channel Estimation for 
+                            Massive IoT Access Based on Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE 
+                            Transactions on Vehicular Technology, vol. 72, no. 1, pp. 1349-1354, Jan. 2023.
                             <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
                             [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
                         </span>
