--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@
             <table>
                 <tr>
                     <td><a href="https://item.jd.com/13533595.html">
-                            <img src="./Files/x7_1.png" title="大规模MIMO通信稀疏信号处理" alt="大规模MIMO通信稀疏信号处理" width="210px"
+                            <img src="./Files/x7_1.png" title="大规模MIMO通信稀疏信号处理" alt="大规模MIMO通信稀疏信号处理" width="200px"
                                 style="display:block; margin:0 auto;">
                         </a>
                     </td>
@@ -1302,6 +1302,11 @@
                                 alt="Massive IoT Access for 6G" width="120px" style="display:block; margin:0 auto;">
                         </a>
                     </td>
+                    <td><a href="https://link.springer.com/book/10.1007/978-981-99-2388-5">
+                        <img src="./Files/x7_3.png" title="Millimeter-Wave/Sub-Terahertz Ultra-Massive MIMO Transmission Technology"
+                            alt="Millimeter-Wave/Sub-Terahertz Ultra-Massive MIMO Transmission Technology" width="120px" style="display:block; margin:0 30px;">
+                    </a>
+                </td>
                 </tr>
             </table>
 
