--- a/index.html
+++ b/index.html
@@ -585,13 +585,13 @@
                     intelligence (AI), has sparked a discussion about the future development of wireless
                     communications. With the global popularization of 5G, industry and science have started their
                     adventure of future 6G design. In wireless communications, <mark>Model-Driven</mark>
-                    <font color="#FF0000">[R1]</font> and
+                    <font color="#FF0000">[R5]</font> and
                     <mark>Data-Driven</mark>
-                    <font color="#FF0000">[R2]</font> methods are proposed in designing <mark>channel estimation,
+                    <font color="#FF0000">[R7]</font> methods are proposed in designing <mark>channel estimation,
                         precoding, and
                         feedback</mark>, while multiple trials on combining AI with <mark>Intelligent Reflecting
                         Surfaces (IRS)</mark>
-                    <font color="#FF0000">[R3]</font> or <mark>Unmanned Aerial Vehicles (UAVs)</mark>
+                    <font color="#FF0000">[R6]</font> or <mark>Unmanned Aerial Vehicles (UAVs)</mark>
                     <font color="#FF0000">[R4]</font> are being explored here.
 
                     <div class="panel panel-default">
@@ -724,9 +724,9 @@
                     Reconfigurable intelligent surfaces (RISs) are regarded as one of the most promising techniques for
                     enhancing the spectrum/energy efficiency of wireless systems. <mark>Channel estimation</mark> of
                     traditional RIS-adied Broadband communication systems has been deeply investigated <font
-                        color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
+                        color="#FF0000">[R2], [R3]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
                     archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
-                    communications has also been studied <font color="#FF0000">[R3]</font>.
+                    communications has also been studied <font color="#FF0000">[R2]</font>.
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -795,9 +795,9 @@
                     Ultra-Massive (UM)-MIMO-based <mark>aeronautical communications</mark> and proposes an effective
                     <mark>channel estimation and tracking scheme</mark>, which can solve the performance degradation
                     problem caused by the unique triple delay-beam-Doppler squint effects of aeronautical terahertz
-                    UM-MIMO channels <font color="#FF0000">[R1]</font>. We have also proposed an edge computing paradigm
+                    UM-MIMO channels <font color="#FF0000">[R8]</font>. We have also proposed an edge computing paradigm
                     for massive IoT connectivity over <mark>High-Altitude Platform Networks (HAPNs)</mark>
-                    <font color="#FF0000">[R2]</font>.
+                    <font color="#FF0000">[R6]</font>.
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -924,18 +924,18 @@
                     Against this background, we proposed a efficient <mark>grant-free massive access scheme</mark>,
                     which exploits
                     the rich spatial dimensionality offered massive MIMO for improved active user detection and channel
-                    estimation performance <font color="#FF0000">[R1]</font>.
+                    estimation performance <font color="#FF0000">[R13]</font>.
                     Meanwhile, considering the cooperation of multiple access points, we investigate two processing
                     paradigms, i.e., <mark>cloud computing and edge computing</mark>, at the receiver for the proposed
                     massive access
-                    scheme <font color="#FF0000">[R2]</font>.
+                    scheme <font color="#FF0000">[R11]</font>.
                     Moreover, the work was extended to <mark>joint activity and data detection</mark> for grant-free
                     massive
-                    access <font color="#FF0000">[R3]</font>.
+                    access <font color="#FF0000">[R9]</font>.
                     Besides, we further propose a <mark>media modulation</mark> based mMTC solution for the throughput
                     increase,
                     where a structured orthogonal matching pursuit algorithm is developed for detecting the active
-                    devices and their data <font color="#FF0000">[R4]</font>.
+                    devices and their data <font color="#FF0000">[R10]</font>.
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -1095,12 +1095,12 @@
                     for mmWave and Terahertz communications. Both the hardware design and software design are critical
                     for mmWave/Terahertz massive MIMO.
                     The <mark>lens-array</mark> and <mark>reconfigurable intelligent surface</mark> with antenna
-                    switching network <font color="#FF0000">[R1] [R2]</font> is adopted for mmWave communications to
+                    switching network <font color="#FF0000">[R6] [R4]</font> is adopted for mmWave communications to
                     cope with the high hardware complexity and power consumption of traditional massive MIMO.
                     Moreover, in the face of severe spatial wideband effective in the broadband Terahertz massive MIMO,
                     an architecture based on true-time-delay line is presented in <font color="#FF0000">[R3]</font>.
                     With the novel hardware architectures above, advanced algorithms, such as ESPRIT <font
-                        color="#FF0000">[R3] [R4]</font>, is also proposed to estimate the large-scale channels via
+                        color="#FF0000">[R3] [R7]</font>, is also proposed to estimate the large-scale channels via
                     limited pilot overhead.
 
                     <div class="panel panel-default">
@@ -1223,7 +1223,7 @@
                     The Integrated Sensing and Communication (ISAC) is regarded as a promising paradigm shift for 6G
                     networks, aiming to develop novel hardware architectures and signal processing techniques for
                     jointly enabling radar sensing and communications with scarce spectrum resource. In <font
-                        color="#FF0000">[R1]</font> we propose
+                        color="#FF0000">[R2]</font> we propose
                     to deploy a radar unit with widely spaced array (WSA) at the base station side, which cooperates
                     with the existing communication unit and thus realizes the radar functionality without complex
                     modification to the current cellular networks. The WSA enhances the angular resolution of radar
@@ -1264,11 +1264,10 @@
 
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>
-                                <font color="#FF0000">[R2]</font> Z. Gao, <b>Z. Gao</b>, D. Zheng, S. Tan, C. Masouros,
-                                D. W.
-                                K. Ng, and S. Chen, "Integrated Sensing and Communication with mmWave Massive MIMO:
-                                A Compressed Sampling Perspective", to appear in IEEE Trans. Wireless Commun.
-                                arXiv:2201.05766
+                                <font color="#FF0000">[R2]</font> <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
+                                Integrated Sensing and Communication With mmWave Massive MIMO: A Compressed Sampling
+                                Perspective," in IEEE Transactions on Wireless Communications, vol. 22, no. 3, pp.
+                                1745-1762, March 2023.
                             </span>
                         </p>
 
