--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2023.08]</font>
+                    </b> Dr. Zhen Gao gives a talk in Blue Ocean Forum 2023 (蓝海论坛报告《大规模MIMO系统海量设备免调度非正交接入》)
+                    <a href="./Files/ZhenGaoBOF202308.pdf" target="_blank">[slide]
+                    </a>
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.07]</font>
                     </b> Paper of Shicong Liu was accecpted by IEEE JSTSP (刘仕聪论文被IEEE JSTSP
                     (IF=7.70)期刊录用)【知识数据协同驱动的无蜂窝大规模MIMO传输】
@@ -164,26 +171,6 @@
                     (IF=11.979)期刊录用)【可重构像素MIMO: 开辟电磁域信息传输新维度】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.02]</font>
-                    </b> Ph.D. student Ziwei Wan visits the University of Surrey (<a
-                        href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
-                        <font>博士生万子维前往英国萨里大学Pei Xiao教授组访问交换</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.02]</font>
-                    </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency
-                    Management (<a href="http://baem.org.cn/sys-nd/221.html" target="_blank">
-                        <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>
-                    </a>)<a href="https://mp.weixin.qq.com/s/T8BmeI3BbwzkoJDZ9zKRig" target="_blank">
-                        <font color="#FF0000">【北理工信息学院专题报道】</font>
-                    </a>
-                </li>
-
-
-
 
                 <details>
                     <summary>View More Earlier News</summary>
@@ -193,6 +180,24 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2023.02]</font>
+                        </b> Ph.D. student Ziwei Wan visits the University of Surrey (<a
+                            href="https://www.surrey.ac.uk/people/pei-xiao" target="_blank">
+                            <font>博士生万子维前往英国萨里大学Pei Xiao教授组访问交换</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.02]</font>
+                        </b> Yang Wang was awarded 2022 Beijing Excellent Master Student in the field of Emergency
+                        Management (<a href="http://baem.org.cn/sys-nd/221.html" target="_blank">
+                            <font>王洋获2022年度北京市应急管理领域优秀硕士研究生</font>
+                        </a>)<a href="https://mp.weixin.qq.com/s/T8BmeI3BbwzkoJDZ9zKRig" target="_blank">
+                            <font color="#FF0000">【北理工信息学院专题报道】</font>
+                        </a>  
+                    </li>    
+                    
                     <li> <b>
                             <font color="#FF0000">[2023.01]</font>
                         </b> Zhen Gao was awarded First Prize in Chinese Institute of Electronics (CIE) Technical
