--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.08]</font>
+                    </b> Yifei Zhang won the championship of the 2023 Wireless Big Data Competition (张翼飞获得第四届无线大数据竞赛冠军"智能多波束优化")
+                    <a href="https://mp.weixin.qq.com/s/yIgUqQs2-r9h-Jstv_srzw" target="_blank">
+                        <font color="#FF0000">【北理工信息学院公众号报道】</font>
+                    </a>
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.08]</font>
                     </b> Dr. Zhen Gao gives a talk in Blue Ocean Forum 2023 (蓝海论坛报告《大规模MIMO系统海量设备免调度非正交接入》)
                     <a href="./Files/ZhenGaoBOF202308.pdf" target="_blank">[slide]
                     </a>
