--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                 Electron. Lett. 2016最佳论文奖、UCET 2020最佳论文、IEEE/CIC ICCC 2021最佳论文、IEEE IWCMC 2022最佳论文奖、EAI WiSATS
                 2023最佳学生论文奖
                 。发表SCI论文50余篇，包括9篇ESI高被引论文，2篇前0.1%热点论文，WoS数据库SCI他引1961次。2018年入选中国科协青年人才托举工程，2020年起连续入选爱思唯尔中国高被引学者，2022年入选北京市科技新星和山东省自然科学基金优青，2021
-                年获得中国电子学会自然科学一等奖，2022年获得中国电子学会自然科学一等奖。担任IEEE Transactions Vehicular Technology编委、IEEE Communications
+                年获得中国电子学会自然科学一等奖，2022年获得中国电子学会技术发明一等奖。担任IEEE Transactions Vehicular Technology编委、IEEE Communications
                 Letters
                 编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
             </p>
