--- a/index.html
+++ b/index.html
@@ -1393,12 +1393,32 @@
                             Semantic Acquisition and Beamforming for Cell-Free Massive MIMO", to appear in IEEE J. Sel.
                             Topics Signal Process.
                             [<a href="https://arxiv.org/abs/2307.03070" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10195164" target="_blank">IEEE URL</a>]
                             <!-- [<a href="https://ieeexplore.ieee.org/document/10130575" target="_blank">IEEE URL</a>] -->
                             <!-- [<a href="https://github.com/LiZhuoRan0" target="_blank"> -->
                                 <!-- <font color="#FF0000">Codes</font> -->
                             <!-- </a>] -->
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwenty">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwenty" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=915571194&bvid=BV1Lu4y1y72y&cid=1256223072&page=1&as_wide=1&high_quality=1&autoplay=0&muted=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[56] Z. Li, <b>Z. Gao</b> and T. Li, "Sensing User's Channel and Location with Terahertz
