--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                    <font color="#FF0000">[2023.09]</font>
+                    </b> Dr. Zhen Gao gives a talk in THIS Forum—6G RIS Technology (6G智能超表面技术研讨会《波束偏移效应下的智能超表面通信感知一体化》)
+                    <a href="./Files/gaozhenslide202309.pdf" target="_blank">[slide]
+                    </a>
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.08]</font>
                     </b> Yifei Zhang won the championship of the 2023 Wireless Big Data Competition (张翼飞获得第四届无线大数据竞赛冠军"智能多波束优化")
                     <a href="https://mp.weixin.qq.com/s/yIgUqQs2-r9h-Jstv_srzw" target="_blank">
@@ -167,19 +174,6 @@
                     </b> Paper of Yikun Mei was accepted by IEEE TVT (梅逸堃论文被IEEE TVT (IF=6.239)期刊录用)【超大规模MIMO系统海量接入】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.03]</font>
-                    </b> Paper of Malong Ke was accepted by IEEE JSAC (柯玛龙论文被IEEE JSAC (IF=13.081)期刊录用)【海量URLLC半盲检测:
-                    无源/有源随机接入的统一框架】
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.03]</font>
-                    </b> Paper of Keke Ying was accepted by IEEE WCM (应科柯论文被IEEE Wireless Commun.
-                    (IF=11.979)期刊录用)【可重构像素MIMO: 开辟电磁域信息传输新维度】
-                </li>
-
-
                 <details>
                     <summary>View More Earlier News</summary>
                     <!-- <li> <b>
@@ -188,6 +182,18 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2023.03]</font>
+                        </b> Paper of Malong Ke was accepted by IEEE JSAC (柯玛龙论文被IEEE JSAC (IF=13.081)期刊录用)【海量URLLC半盲检测:
+                        无源/有源随机接入的统一框架】
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.03]</font>
+                        </b> Paper of Keke Ying was accepted by IEEE WCM (应科柯论文被IEEE Wireless Commun.
+                        (IF=11.979)期刊录用)【可重构像素MIMO: 开辟电磁域信息传输新维度】
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2023.02]</font>
                         </b> Ph.D. student Ziwei Wan visits the University of Surrey (<a
