--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                     </b> Dr. Zhen Gao gives a talk in THIS Forum—6G RIS Technology (6G智能超表面技术研讨会《波束偏移效应下的智能超表面通信感知一体化》)
                     <a href="./Files/gaozhenslide202309.pdf" target="_blank">[slide]
                     </a>
+                    <a href="https://www.bilibili.com/video/BV1G84y1U71W/" target="_blank"><font color="#FF0000">[video]</font>
+                    </a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2023.09]</font>
+                    </b> 高镇入选教育部国家级青年人才计划。
                 </li>
 
                 <li> <b>
