--- a/index.html
+++ b/index.html
@@ -586,13 +586,12 @@
                 <br />
                 <br />
 
-                主要从事宽带通信与智能信号处理，包括物联网机器类通信、智能边缘计算、空天地一体化信息网络、6G大规模 MIMO 通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET
-                Electron. Lett. 2016最佳论文奖、UCET 2020最佳论文、IEEE/CIC ICCC 2021最佳论文、IEEE IWCMC 2022最佳论文奖、EAI WiSATS
-                2023最佳学生论文奖
-                。发表SCI论文50余篇，包括9篇ESI高被引论文，2篇前0.1%热点论文，WoS数据库SCI他引1961次。2018年入选中国科协青年人才托举工程，2020年起连续入选爱思唯尔中国高被引学者，2022年入选北京市科技新星和山东省自然科学基金优青，2021
-                年获得中国电子学会自然科学一等奖，2022年获得中国电子学会技术发明一等奖。担任IEEE Transactions Vehicular Technology编委、IEEE Communications
-                Letters
-                编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
+                特别研究员、长聘副教授，博士生导师，入选国家级青年人才计划。主要从事宽带通信与智能信号处理，包括物联网机器类通信、智能边缘计算、空天地一体化信息网络、
+                6G 大规模 MIMO 通信，以及人工智能赋能6G通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET Electron. Lett. 2016 最佳论文奖、UCET 2020 最佳
+                论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余 篇，包括9篇 ESI 高被引论文，2 篇前 
+                0.1%热点论文，谷歌学术引用4500余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021 、2022年中国
+                高被引学者，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。担任IEEE Transactions 
+                Vehicular Technology编委、IEEE Communications Letters 编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
             </p>
 
 
@@ -1402,6 +1401,28 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[60] L. Li, Y. Yang, L. Bao, <b>Z. Gao</b>, Y. Wu and H. Xiang, "Deep Reinforcement Learning based Downlink Beamforming and 
+                            Phase Optimization for RIS-Aided Communication System," in IEEE Wireless Communications Letters, doi: 10.1109/LWC.2023.3318212.
+                            [<a href=" https://ieeexplore.ieee.org/document/10261216" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[59] K. Song, B. Feng, Y. Wu, <b>Z. Gao</b> and W. Zhang, "R-PMAC: A Robust Preamble Based MAC Mechanism Applied 
+                            in Industrial Internet of Things," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3285890.
+                            [<a href="https://arxiv.org/pdf/2306.05629.pdf" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10168087" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[58] Z. Wang, J. Wang, <b>Z. Gao</b>, Y. Huang, D. W. K. Ng and L. Hanzo, "Rapidly Converging Low-Complexity 
+                            Iterative Transmit Precoders for Massive MIMO Downlink," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2023.3305646.
+                            [<a href="https://ieeexplore.ieee.org/document/10220155" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[57] <b>Z. Gao</b>, S. Liu, Y. Su, Z. Li, and D. Zheng, "Hybrid Knowledge-Data Driven Channel
                             Semantic Acquisition and Beamforming for Cell-Free Massive MIMO", to appear in IEEE J. Sel.
                             Topics Signal Process.
@@ -1521,7 +1542,7 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[54] Y. Mei, <b>Z. Gao</b>, D. Mi, M. Zhou, D. Zheng, M. Matthaiou, P. Xiao,
                             R. Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
-                            Channels," accepted by IEEE Trans. Vehicular Technology, 2023.
+                            Channels," in IEEE Transactions on Vehicular Technology, vol. 72, no. 9, pp. 12373-12378, Sept. 2023.
                             [<a href="https://arxiv.org/abs/2207.01983" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10098957" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/meiyikun/TVT2023_Near-field_Massive_Access" target="_blank">
@@ -1529,6 +1550,25 @@
                             </a>]
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyOne" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=321780741&bvid=BV1Ew411a7bK&cid=1289164561&page=1&as_wide=1&high_quality=1&autoplay=0&muted=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[53] <b>Z. Gao</b>, H. Xiu, Y. Mei, A. Liao, M. Ke, C. Hu, M. S. Alouini, "Multi-panel extra-large scale 
