--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
+
+                <li> <b>
+                    <font color="#FF0000">[2023.10]</font>
+                </b> Paper of Li Qiao was accecpted by IEEE TCOM (
+                <a href="https://arxiv.org/pdf/2307.10837.pdf" target="_blank">
+                    <font>乔力论文被IEEE TCOM (IF=8.3)期刊录用</font>
+                </a>)【近场超大阵列的感知通信一体化】
+            </li>
+
                 <li> <b>
                     <font color="#FF0000">[2023.09]</font>
                     </b> Dr. Zhen Gao gives a talk in THIS Forum—6G RIS Technology (6G智能超表面技术研讨会《波束偏移效应下的智能超表面通信感知一体化》)
@@ -156,30 +165,6 @@
                     (IF=7.70)期刊录用)【混合场波束偏移效应下的信道估计与定位】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.04]</font>
-                    </b> Shicong Liu was awarded Hong Kong PhD Fellowship Scheme (HKPFS) at CityU Hong Kong (<a
-                        href="https://www.ugc.edu.hk/doc/eng/rgc/hkphd/2023_24_awardee.pdf" target="_blank">
-                        <font>刘仕聪获得港府奖学金资助在香港城市大学攻读博士学位</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.04]</font>
-                    </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC
-                    (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.04]</font>
-                    </b> Dr. Zhen Gao is the recipient of Elsevier 2022 MOST Cited Chinese Researchers (高镇
-                    入选爱思唯尔2022中国高被引学者)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.04]</font>
-                    </b> Paper of Yikun Mei was accepted by IEEE TVT (梅逸堃论文被IEEE TVT (IF=6.239)期刊录用)【超大规模MIMO系统海量接入】
-                </li>
 
                 <details>
                     <summary>View More Earlier News</summary>
@@ -189,6 +174,31 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2023.04]</font>
+                        </b> Shicong Liu was awarded Hong Kong PhD Fellowship Scheme (HKPFS) at CityU Hong Kong (<a
+                            href="https://www.ugc.edu.hk/doc/eng/rgc/hkphd/2023_24_awardee.pdf" target="_blank">
+                            <font>刘仕聪获得港府奖学金资助在香港城市大学攻读博士学位</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.04]</font>
+                        </b> Paper of Keke Ying was accepted by IEEE JSAC (应科柯论文被IEEE JSAC
+                        (IF=13.081)期刊录用)【低轨卫星星座协作式大规模随机接入】
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.04]</font>
+                        </b> Dr. Zhen Gao is the recipient of Elsevier 2022 MOST Cited Chinese Researchers (高镇
+                        入选爱思唯尔2022中国高被引学者)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.04]</font>
+                        </b> Paper of Yikun Mei was accepted by IEEE TVT (梅逸堃论文被IEEE TVT (IF=6.239)期刊录用)【超大规模MIMO系统海量接入】
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2023.03]</font>
                         </b> Paper of Malong Ke was accepted by IEEE JSAC (柯玛龙论文被IEEE JSAC (IF=13.081)期刊录用)【海量URLLC半盲检测:
