--- a/index.html
+++ b/index.html
@@ -2787,6 +2787,9 @@
                         <li><span style="font-variant-caps: small-caps;">IEEE Communications Letters</span></li>
                         <!-- <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li> -->
                         <li>Frontiers in Communications and Networks</li>
+                        <li>Space: Science and Technology
+                        <a href="./Files/ZhenGaoSST.pdf" target="_blank">[pdf]</a>
+                        </li>
                     </ul>
                 </font>
                 <br />
@@ -2902,12 +2905,35 @@
                     <li> <b>
                             <font color="#FF0000">[2023]</font>
                         </b> <a href="https://scliubit.github.io/" target="_blank">刘仕聪</a>, 工学硕士,&nbsp; 目前在香港城市大学读博.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                                刘仕聪，2020级硕士，获2020、2021年国家奖学金，2021年特等学业奖学金等，并获得香港政府博士生奖学金计划资助攻读博士学位。
+                                硕士期间于IEEE TVT、COMMAG等期刊发表期刊论文2篇，会议论文1篇，获AI无线通信竞赛团队三等奖1次。获校优秀学生、
+                                优秀硕士论文、北京市优秀毕业生表彰。
+                            </p>   
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                                M.Eng. graduate of 2023. Awardee of National Scholarships in 2020 and 2021, the 1st Prize of the 2021 Annual Scholarship, 
+                                and the Hong Kong PhD Fellowship Scheme (HKPFS’23-27). Published 2 journal papers in IEEE TVT and COMMAG, 1 conference paper in ICCC, 
+                                and won 3rd place in the AI Wireless Communication competition. Honored as outstanding student at BIT in 2022 and municipal outstanding 
+                                graduate of Beijing in 2023. Awarded outstanding master’s thesis of BIT in 2023.
+                            </p>
+                        </details>
                     </li>
 
                     <li> <b>
                             <font color="#FF0000">[2023]</font>
                         </b> <a href="https://yang05941601.github.io/" target="_blank">王洋</a>, 工学硕士,&nbsp;
                         目前就职于中兴通讯（上海）.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                                王洋，2020级硕士，获2023年徐特立奖学金，2022年国家奖学金，2022年特等学业奖学金，2021年小米特等奖学金等。
+                                硕士期间于IEEE IoTJ、WCM等期刊发表SCI论文2篇，会议EI论文1篇，获无线大数据竞赛个人二等奖，AI无线通信竞赛团队三等奖。
+                                获校优秀学生、优秀硕士论文、北京市优秀毕业生表彰。
+                            </p>   
+                        </details>
+                    </li>
 
                     <li> <b>
                             <font color="#FF0000">[2022]</font>
@@ -2920,11 +2946,25 @@
                     <li> <b>
                             <font color="#FF0000">[2021]</font>
                         </b> 马西锁, 专业硕士,&nbsp; 目前就职于中国电子科技集团公司第五十四研究所.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                            马西锁，2018级硕士，获2020年国家奖学金，2020年特等学业奖学金。硕士期间于IEEE JSAC、TVT等期刊发表SCI论文2篇，会议EI论文1篇。
+                            获北京市优秀毕业生，校优秀毕业生，校优秀团员等荣誉表彰。
+                            </p>   
+                        </details>
                     </li>
 
                     <li> <b>
                             <font color="#FF0000">[2019]</font>
                         </b> 毛杰宁, 专业硕士,&nbsp; 目前就职于中兴通讯（深圳）.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                            毛杰宁，2017级硕士，获2018年国家奖学金，2018年一等学业奖学金，2017年二等学业奖学金。硕士期间于WCL期刊发表SCI论文1篇。
+                            毕业后在中兴通讯工作。
+                            </p>   
+                        </details>
                     </li>
 
                 </ul>
