--- a/index.html
+++ b/index.html
@@ -2892,6 +2892,16 @@
                     <li> <b>
                             <font color="#FF0000">[2023]</font>
                         </b> 柯玛龙, 博士,&nbsp; 目前就职于锐捷网络.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                                柯玛龙，2019级博士，博士期间在IEEE TSP、IEEE JSAC、IEEE WCM等期刊上发表期刊论文4篇，
+                                其中2篇入选ESI高被引论文；在IEEE ICC、IEEE WCMC、IEEE GlobalSIP等国际会议上发表会议论文3篇，
+                                其中2篇获Student Travel Grant Award，1篇获会议最佳论文奖。曾获2023年北京市优秀毕业生，
+                                2023年北京理工大学优秀毕业生，2021年博士研究生国家奖学金，2020&2021年北京理工大学优秀研究生标兵，
+                                2022年北京理工大学优秀研究生、2020-2022年博士特等学业奖学金、2020年华瑞世纪奖学金等荣誉和奖励。
+                            </p>   
+                        </details>
                     </li>
 
                     <li> <b>
@@ -2934,6 +2944,14 @@
                     <li> <b>
                             <font color="#FF0000">[2021]</font>
                         </b> 廖安文, 博士,&nbsp; 目前就职于中国电子科技集团公司第十四研究所.
+                        <details>
+                            <summary>在读期间成果</summary>
+                            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                                廖安文，2016级硕士+2018级博士，获2018年优秀毕业生，2020年特等学业奖学金和优秀研究生，
+                                2021年国家奖学金，2022年一等学业奖学金等。硕博期间于IEEE JSAC、Tcom、Access等期刊发表SCI论文3篇，
+                                会议EI论文3篇。毕业后在中电科14所工作。
+                            </p>   
+                        </details>
 
                     <li> <b>
                             <font color="#FF0000">[2021]</font>
@@ -2941,8 +2959,8 @@
                         <details>
                             <summary>在读期间成果</summary>
                             <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
-                            马西锁，2018级硕士，获2020年国家奖学金，2020年特等学业奖学金。硕士期间于IEEE JSAC、TVT等期刊发表SCI论文2篇，会议EI论文1篇。
-                            获北京市优秀毕业生，校优秀毕业生，校优秀团员等荣誉表彰。
+                                马西锁，2018级硕士，获2020年国家奖学金，2020年特等学业奖学金。硕士期间于IEEE JSAC、TVT等期刊发表SCI论文2篇，会议EI论文1篇。
+                                获北京市优秀毕业生，校优秀毕业生，校优秀团员等荣誉表彰。
                             </p>   
                         </details>
                     </li>
@@ -2953,8 +2971,8 @@
                         <details>
                             <summary>在读期间成果</summary>
                             <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
-                            毛杰宁，2017级硕士，获2018年国家奖学金，2018年一等学业奖学金，2017年二等学业奖学金。硕士期间于WCL期刊发表SCI论文1篇。
-                            毕业后在中兴通讯工作。
+                                毛杰宁，2017级硕士，获2018年国家奖学金，2018年一等学业奖学金，2017年二等学业奖学金。硕士期间于WCL期刊发表SCI论文1篇。
+                                毕业后在中兴通讯工作。
                             </p>   
                         </details>
                     </li>
